# BoltStream

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  PLAN.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
benchmarks/: microbench.cpp  placeholder_bench.cpp
benchmarks/profiles/: batched-writes.yaml  single-threaded.yaml  worker-event-loops.yaml
benchmarks/results/: phase-10-gcp-e2-micro.json  phase-10-windows-release.json  phase-11-windows-smoke.json
benchmarks/results/raw/gcp/: batched-writes-fetch-throughput-r1.json  batched-writes-fetch-throughput-r2.json  batched-writes-fetch-throughput-r3.json  batched-writes-produce-latency-r1.json  batched-writes-produce-latency-r2.json  batched-writes-produce-latency-r3.json  batched-writes-produce-throughput-r1.json  batched-writes-produce-throughput-r2.json  batched-writes-produce-throughput-r3.json  single-threaded-fetch-throughput-r1.json  single-threaded-fetch-throughput-r2.json  single-threaded-fetch-throughput-r3.json  single-threaded-produce-latency-r1.json  single-threaded-produce-latency-r2.json  single-threaded-produce-latency-r3.json  single-threaded-produce-throughput-r1.json  single-threaded-produce-throughput-r2.json  single-threaded-produce-throughput-r3.json  worker-event-loops-fetch-throughput-r1.json  worker-event-loops-fetch-throughput-r2.json  worker-event-loops-produce-latency-r1.json  worker-event-loops-produce-latency-r2.json  worker-event-loops-produce-throughput-r1.json  worker-event-loops-produce-throughput-r2.json
benchmarks/results/raw/windows/: batched-writes-fetch-throughput.json  batched-writes-produce-latency.json  batched-writes-produce-throughput.json  single-threaded-fetch-throughput.json  single-threaded-produce-latency.json  single-threaded-produce-throughput.json  worker-event-loops-fetch-throughput.json  worker-event-loops-produce-latency.json  worker-event-loops-produce-throughput.json
clients/python/: README.md  boltstream_client.py
clients/python/tests/: test_boltstream_client.py
cmake/: build_config.h.in
config/: boltstream.compose.yaml  boltstream.example.yaml
deployments/gcp/: boltstream.yaml
deployments/gcp/scripts/: benchmark-phase10-live.ps1  bootstrap.ps1  deploy.ps1  inspect-live.ps1  metrics-tunnel.ps1  smoke-live.ps1  smoke-phase11-live.ps1  smoke-phase12-live.ps1  smoke-phase13-live.ps1  smoke-phase9-live.ps1
deployments/gcp/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  startup.sh  terraform.tfvars.example  variables.tf  versions.tf
deployments/metrics/: alerts.test.yml  alerts.yml  prometheus-live.yml  prometheus.yml
deployments/metrics/grafana/dashboards/: boltstream-operations.json
deployments/metrics/grafana/provisioning/dashboards/: boltstream.yml
deployments/metrics/grafana/provisioning/datasources/: prometheus.yml
docs/: admin.md  benchmarks-windows.md  benchmarks.md  compression-benchmarks.md  gcp.md  operations.md  protocol.md  storage.md
include/boltstream/: build_info.h
include/boltstream/benchmark/: statistics.h
include/boltstream/broker/: group_coordinator.h  options.h  server.h
include/boltstream/client/: async_client.h
include/boltstream/compression/: compression.h
include/boltstream/config/: config.h
include/boltstream/observability/: logger.h  metrics.h
include/boltstream/protocol/: protocol.h
include/boltstream/recovery/: proof.h
include/boltstream/replication/: simulation.h
include/boltstream/storage/: offset_store.h  partition_log.h
proof/: phase-1.md  phase-10.md  phase-11.md  phase-12.md  phase-13.md  phase-14.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
scripts/: bench.ps1  build.ps1  format.ps1  package.ps1  render-benchmarks.ps1  render-windows-benchmarks.ps1  smoke-phase10.ps1  smoke-phase11.ps1  smoke-phase12.ps1  smoke-phase13.ps1  smoke-phase2.ps1  smoke-phase3.ps1  smoke-phase4.ps1  smoke-phase5.ps1  smoke-phase6.ps1  smoke-phase7.ps1  smoke-phase8.ps1  smoke-phase9.ps1  smoke-polish.ps1  test.ps1  toolchain-check.ps1
src/benchmark/: statistics.cpp
src/broker/: group_coordinator.cpp  options.cpp  server.cpp
src/client/: async_client.cpp
src/common/: build_info.cpp
src/compression/: compression.cpp
src/config/: config.cpp
src/observability/: logger.cpp  metrics.cpp
src/protocol/: protocol.cpp
src/recovery/: proof.cpp
src/replication/: simulation.cpp
src/storage/: offset_store.cpp  partition_log.cpp
src/tools/: server_main.cpp
tests/: benchmark_statistics_tests.cpp  build_info_tests.cpp  client_broker_tests.cpp  compression_tests.cpp  config_tests.cpp  group_coordinator_tests.cpp  metrics_tests.cpp  options_tests.cpp  protocol_tests.cpp  recovery_proof_tests.cpp  replication_simulation_tests.cpp  storage_tests.cpp
tools/: admin_cli.cpp  bench_cli.cpp  consumer_cli.cpp  logtool_cli.cpp  producer_cli.cpp  recovery_proof_cli.cpp  replication_sim_cli.cpp
